<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cad2c5"
    android:padding="30dp"
    tools:context=".activity.SettingActivity">


    <TextView
        android:id="@+id/txtAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_the_reminder"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/switchAlarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchAlarm" />

    <TextView
        android:id="@+id/txtAlarmDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_the_reminder_detail"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlarm" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/SwitchCompatTheme"
        app:layout_constraintTop_toTopOf="@id/txtAlarm"
        app:layout_constraintBottom_toBottomOf="@id/txtAlarmDetail"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/languange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/languange_setting"
        android:textSize="16sp"
        android:textColor="#000000"
        android:background="#79C3C2"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtAlarmDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>